syntax = "proto3";
package protobuf;

import "google/protobuf/empty.proto";
// import "google/protobuf/timestamp.proto";
import "currency_helpers.proto";
option go_package = "./";

service ControllerCommands {
  // Manually get the price of one or more currencies
  rpc ControllerVersion (google.protobuf.Empty) returns (ControllerVersionReply) {}
  // Manually get the price of one or more currencies
  rpc CurrencyPrice (CurrencyPriceReq) returns (CurrencyPriceReply) {}
  // Update the price of one or more currenices(normally sent 1 at a time but can be batched)
  rpc CurrencyPriceUpdate (CurrencyPriceUpdateReq) returns (CurrencyPriceUpdateReply) {}
  // Subscribe to currency updates 
  rpc CurrencyPriceSubscribe (CurrencyPriceSubscribeReq) returns (CurrencyPriceSubscribeReply) {}
}

message ControllerVersionReply {
  string controller_version = 1;
}

message CurrencyPriceReq {
  repeated string currency_pairs = 1;
}

message CurrencyPriceReply {
  repeated CurrencyItem currency_items = 1;
}

message CurrencyPriceUpdateReq {
  repeated CurrencyItem currency_items = 1;
}

message CurrencyPriceUpdateReply {
  repeated CurrencyItem currency_items = 1;
}

message CurrencyPriceSubscribeReq {
  repeated string currency_pairs = 1;
}

message CurrencyPriceSubscribeReply {
  repeated string currency_pairs = 1;
}